--- a/VeeamTestTask.Implementation/VeeamTestTask.Implementation.csproj
+++ b/VeeamTestTask.Implementation/VeeamTestTask.Implementation.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="5.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\VeeamTestTask.Contracts\VeeamTestTask.Contracts.csproj" />
   </ItemGroup>
 
