* Избавиться от BufferedStream * Оптимизация буффера на последнем блоке

--- a/VeeamTestTask.CLI/VeeamTestTask.CLI.csproj
+++ b/VeeamTestTask.CLI/VeeamTestTask.CLI.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20071.2" />
   </ItemGroup>
